--- a/src/App.css
+++ b/src/App.css
@@ -160,6 +160,29 @@ nav{
   background-color: white;
 }
 
+.navTransparent{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: var(--dark);
+  padding-top: 1.5rem;
+  padding-left: 4rem;
+  padding-right: 4rem;
+  padding-bottom: 1.5rem;
+  font-family: 'Manrope', sans-serif;
+  font-weight: 600;
+  font-size: 1.1rem;
+  font-size: 16px;
+  z-index: 99999;
+  width: 100%;
+  position: fixed;
+  background-color: white;
+}
+
+.navColorActive{
+  display: none;
+}
+
 nav button{
   background-color: var(--dark);
   border-radius: 25px;
@@ -392,6 +415,13 @@ nav ul a:hover{
   display: flex;
   flex-direction: column;
   gap: 3rem;
+  transform: translateY(100px);
+  opacity: 0;
+}
+
+.aboutMeTeaserLower{
+  transform: translateY(100px);
+  opacity: 0;
 }
 
 .aboutMeTeaser svg{
@@ -400,9 +430,9 @@ nav ul a:hover{
 }
 
 .aboutMeTeaser p{
-  color: white;
+  color: var(--darkgrey);
   font-size: 1rem;
-  line-height: 1.6;
+  line-height: 1.66;
   font-weight: 300;
   max-width: 40ch;
 }
@@ -410,6 +440,7 @@ nav ul a:hover{
   font-size: 2.6rem;
   font-weight: 400;
   line-height: 1.45;
+  max-width: 40ch;
 }
 
 /* ------------------- selectedWorks ---------------- */
@@ -423,13 +454,6 @@ nav ul a:hover{
   background-color: black;
   color: white;
 }
-
-.selectedWorks h3{
-  font-family: 'Druk Wide', sans-serif;
-  font-size: 2.8rem;
-}
-
-
 
 /*--------------------- footer ---------------------*/
 footer{
@@ -792,6 +816,24 @@ footer h3{
   gap: 0.7rem;
 }
 
+.aboutPageHeader{
+  display: flex;
+  justify-content: space-between;
+  gap: 5rem;
+  width: 100%;
+}
+
+.aboutPageHeader p{
+  font-size: 1.4rem;
+  line-height: 1.66;
+}
+
+.aboutPageHeader img{
+  border-radius: 20px;
+  max-width: 50%;
+
+}
+
 /* ------------------- big text marquee component ---------------------*/
 .bigTextContainer{
   display: flex;
@@ -819,7 +861,74 @@ footer h3{
   font-size: 13rem;
   font-family: 'Manrope', sans-serif;
   font-weight: 400;
-  letter-spacing: -0.6rem;
+  letter-spacing: -0.8rem;
+}
+
+/* ------------------ fetch from category --------------------- /*
+/* Components: CategoryFetchPost.js - ProjectItemCategory.js */
+.projectItemCategory{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  max-width: 48%;
+  padding-bottom: 3rem;
+}
+
+.categoryGrid{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  gap: 2rem;
+}
+
+.projectItemCategory img{
+  max-width: 100%;
+  height: auto;
+  border-radius: 25px;
+}
+
+.projectItemCategory:hover{
+  cursor: pointer;
+}
+
+.projectItemCategory h2{
+  font-size: 1.4rem;
+  font-weight: 800;
+  font-family: 'Manrope', sans-serif;
+}
+
+.projectItemCategory h3{
+  font-family: 'Manrope', sans-serif;
+  font-size: 1.4rem;
+  font-weight: 400;
+  color: var(--darkgrey);
+}
+
+.categoryTeaser h3{
+  font-size: 1.1rem;
+}
+
+.projectItemText p{
+  font-size: 1.1rem;
+}
+
+.projectItemText{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 1rem;
+}
+
+.projectItem:hover{
+  cursor: pointer;
+}
+
+
+
+.projectItemDate{
+  display: flex;
+  justify-content: space-between;
 }
 
 /* ------------------ RESPONSIVE BREAKPOINTS -------------------------*/
