--- a/src/App.css
+++ b/src/App.css
@@ -341,9 +341,9 @@ nav ul a:hover{
   color: black;
   font-size: 2rem;
   font-weight: 500;
-  padding-left: 10rem;
+  padding-left: 4rem;
   padding-right: 8rem;
-  max-width: 45ch;
+  max-width: 38ch;
 }
 
 .landingBoxUpper p, a{
@@ -362,8 +362,7 @@ nav ul a:hover{
   display: flex;
   align-items: center;
   padding-top: 3rem;
-  padding-left: 10rem;
-  padding-right: 8rem;
+  padding-left: 4rem;
   gap: 0.8rem;
 }
 
@@ -402,7 +401,6 @@ nav ul a:hover{
   padding-bottom: 12rem;
   padding-left: 10rem;
   padding-right: 10rem;
-  
 }
 
 .aboutMeTeaser{
@@ -436,6 +434,7 @@ nav ul a:hover{
   font-weight: 300;
   max-width: 40ch;
 }
+
 .aboutMeTeaser h4{
   font-size: 2.6rem;
   font-weight: 400;
@@ -446,8 +445,8 @@ nav ul a:hover{
 /* ------------------- selectedWorks ---------------- */
 .sectionWide{
   padding-bottom: 12rem;
-  padding-left: 10rem;
-  padding-right: 10rem;
+  padding-left: 4rem;
+  padding-right: 4rem;
 }
 
 .selectedWorks{
@@ -831,7 +830,27 @@ footer h3{
 .aboutPageHeader img{
   border-radius: 20px;
   max-width: 50%;
+}
 
+.aboutExperience{
+  padding-top: 12rem;
+}
+
+.experienceRowContainer{
+  display: flex;
+  justify-content: space-between;
+}
+
+.experienceRow{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding-bottom: 4rem;
+}
+
+.experienceRow h4{
+  font-size: 1.4rem;
+  font-weight: 800;
 }
 
 /* ------------------- big text marquee component ---------------------*/
