--- a/src/App.css
+++ b/src/App.css
@@ -549,6 +549,26 @@ footer h3{
   list-style-type: none;
 }
 
+.footerCTA h2{
+ 
+}
+.footerCTA svg{
+  height: 3rem;
+}
+
+.footerCTA a{
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  font-size: 3rem;
+  font-weight: 800;
+  line-height: 1.2;
+  text-underline-offset: 0.8rem;
+  color: black;
+  text-decoration: underline;
+
+}
+
 .footerLinks a{
   text-decoration: none;
   color: black;
@@ -568,6 +588,13 @@ footer h3{
   width: 100%;
   height: 1px;
   background-color: var(--grey);
+}
+
+.stripe2{
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: black;
 }
 
 /* --------------- all project pages ---------------*/
@@ -740,7 +767,7 @@ footer h3{
   text-decoration: underline;
   font-weight: 600;
   font-size: 1.1rem;
-  color: var(--darkgrey);
+  color: black;
   text-underline-offset: 0.2rem;
 }
 
@@ -762,6 +789,18 @@ footer h3{
 
 .projectGallery img{
   width: 100%;
+}
+
+.sectionImage img{
+  width: 100%;
+  border-radius: 40px;
+}
+
+.sectionImage{
+  max-width: 100%;
+  padding-left: 5rem;
+  padding-right: 5rem;
+  padding-bottom: 9rem;
 }
 
 /* ------------- testimonials ------------------- */
@@ -854,6 +893,7 @@ footer h3{
   padding-right: 10rem;
   padding-top: 13rem;
   padding-bottom: 10rem;
+  line-height: 1.66;
 }
 
 .aboutSkills{
@@ -863,13 +903,13 @@ footer h3{
 }
 
 .aboutPage h2{
-  font-size: 3rem;
+  font-size: 2rem;
   font-family: 'Druk Wide', sans-serif;
 }
 
 .skillsetBox{
   display: flex;
-  gap: 8rem;
+  gap: 6rem;
 }
 
 .skillsetItem{
@@ -895,6 +935,7 @@ footer h3{
 
 .aboutPageHeader{
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   gap: 5rem;
   width: 100%;
@@ -911,6 +952,8 @@ footer h3{
 }
 
 .aboutExperience{
+  display: flex;
+  justify-content: space-between;
   padding-top: 12rem;
 }
 
@@ -919,15 +962,22 @@ footer h3{
   justify-content: space-between;
 }
 
-.experienceRow{
+.experienceCol{
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  padding-bottom: 4rem;
+  width: 65%;
+}
+
+.experienceRow{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10rem;
 }
 
 .experienceRow h4{
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   font-weight: 800;
 }
 
