--- a/src/App.css
+++ b/src/App.css
@@ -141,6 +141,29 @@ a{
   font-family: 'Manrope', sans-serif;
 }
 
+.mainBtn button:hover{
+  cursor: pointer;
+  outline: solid 2px white;
+  color: white;
+  transition: 0.5s ease;
+}
+
+.mainBtn{
+  font-family: 'Manrope', sans-serif;
+  color: rgb(0, 0, 0);
+  font-size: 1rem;
+  font-weight: 800;
+  outline: solid 3px rgb(104, 104, 104);
+  padding-left: 2rem;
+  padding-right: 2rem;
+  padding-top: 0.7rem;
+  padding-bottom: 0.7rem;
+  border-radius: 25px;
+  transition: 0.7s ease;
+  max-width: 250px;
+  text-align: center;
+}
+
 /*------------- navbar ---------------- */
 .scrollToTop{
   display: flex;
@@ -333,8 +356,8 @@ nav ul a:hover{
 .page{
   font-family: 'Manrope', sans-serif;
   background-color: black;
-  padding-left: 15rem;
-  padding-right: 15rem;
+  padding-left: 5rem;
+  padding-right: 5rem;
   color: white;
 }
 
@@ -381,7 +404,7 @@ nav ul a:hover{
   color: black;
   font-size: 2rem;
   font-weight: 500;
-  padding-left: 4rem;
+  padding-left: 5rem;
   padding-right: 8rem;
   max-width: 38ch;
 }
@@ -402,7 +425,7 @@ nav ul a:hover{
   display: flex;
   align-items: center;
   padding-top: 3rem;
-  padding-left: 4rem;
+  padding-left: 5rem;
   gap: 0.8rem;
 }
 
@@ -431,8 +454,8 @@ nav ul a:hover{
 .landingBoxLower{
   display: flex;
   justify-content: space-between;
-  padding-left: 8rem;
-  padding-right: 8rem;
+  padding-left: 5rem;
+  padding-right: 5rem;
 }
 
 /* --------------------- about me teaser ----------------------*/
@@ -441,8 +464,8 @@ nav ul a:hover{
   color: white;
   padding-top: 12rem;
   padding-bottom: 12rem;
-  padding-left: 10rem;
-  padding-right: 10rem;
+  padding-left: 5rem;
+  padding-right: 5rem;
 }
 
 .aboutMeTeaser{
@@ -487,8 +510,8 @@ nav ul a:hover{
 /* ------------------- selectedWorks ---------------- */
 .sectionWide{
   padding-bottom: 12rem;
-  padding-left: 10rem;
-  padding-right: 10rem;
+  padding-left: 5rem;
+  padding-right: 5rem;
 }
 
 .selectedWorks{
@@ -557,8 +580,8 @@ nav ul a:hover{
 /*--------------------- footer ---------------------*/
 footer{
   padding-top: 10rem;
-  padding-left: 10rem;
-  padding-right: 10rem;
+  padding-left: 4rem;
+  padding-right: 4rem;
   padding-bottom: 5rem;
   background-color: black;
   color: white;
@@ -568,6 +591,8 @@ footer{
   display: flex;
   width: 40%;
   justify-content: space-between;
+  transform: translateY(100px);
+  opacity: 0;
 }
 
 .footerTop{
@@ -584,7 +609,6 @@ footer{
 
 .footerBottom p{
   color: var(--darkgrey);
-
 }
 
 footer h2{
@@ -607,6 +631,11 @@ footer h3{
   gap: 0.3rem;
   list-style-type: none;
   color: var(--darkgrey);
+}
+
+.footerCTA{
+  transform: translateY(100px);
+  opacity: 0;
 }
 
 .footerCTA svg{
@@ -943,8 +972,8 @@ footer h3{
   justify-content: space-between;
   font-size: 1.8rem;
   color: white;
-  padding-left: 15rem;
-  padding-right: 15rem;
+  padding-left: 5rem;
+  padding-right: 5rem;
 }
 
 .testimonialsHeaderText{
@@ -1013,11 +1042,12 @@ footer h3{
 .aboutPage{
   display: flex;
   flex-direction: column;
-  padding-left: 10rem;
-  padding-right: 10rem;
-  padding-top: 13rem;
+  padding-left: 4rem;
+  padding-right: 4rem;
+  padding-top: 8rem;
   padding-bottom: 10rem;
   line-height: 1.66;
+  width: 100%;
 }
 
 .aboutImage{
@@ -1026,6 +1056,20 @@ footer h3{
   align-items: center;
   width: 100%;
   height: 100%;
+  opacity: 0;
+  clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0% 100%);
+  transform: translateY(50px);
+}
+
+.aboutPageHeaderBox{
+  opacity: 0;
+  padding-bottom: 1rem;
+}
+
+.aboutPageHeaderLinks{
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 }
 
 .aboutImage img{
@@ -1033,10 +1077,19 @@ footer h3{
   max-width: 30%;
 }
 
+.aboutMeImage{
+  max-width: 100%;
+}
+
+.aboutMeImage img{
+  border-radius: 40px;
+  width: 100%;
+}
+
 .aboutSkills{
+  font-size: 1.4rem;
   display: flex;
-  flex-direction: column;
-  gap: 5rem;
+  justify-content: space-between;
 }
 
 .aboutPage h2{
@@ -1046,36 +1099,30 @@ footer h3{
 
 .skillsetBox{
   display: flex;
-  gap: 6rem;
+  flex-direction: column;
+  gap: 3rem;
+  width: 50%;
 }
 
 .skillsetItem{
   display: flex;
   flex-direction: column;
-  gap: 2rem;
   line-height: 1.66;
-  width: 33%;
 }
 
 .aboutPage h3{
-  font-size: 2rem;
-  font-weight: 500;
-}
-
-.skillsetBoxTop{
-  color: var(--grey);
-  opacity: 0.5;
-  display: flex;
-  flex-direction: column;
-  gap: 0.7rem;
+  font-size: 1.4rem;
+  padding-bottom: 0.8rem;
+  font-weight: 800;
 }
 
 .aboutPageHeader{
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  gap: 5rem;
+  gap: 2rem;
   width: 100%;
+  padding-bottom: 10rem;
 }
 
 .aboutPageHeaderBox img{
@@ -1092,8 +1139,15 @@ footer h3{
 
 .aboutExperience{
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
-  padding-top: 12rem;
+  padding-top: 8rem;
+  padding-bottom: 10rem;
+}
+
+.aboutExperience h2{
+  padding-bottom: 2rem;
+  font-size: 2.4rem;
 }
 
 .experienceRowContainer{
@@ -1102,10 +1156,10 @@ footer h3{
 }
 
 .experienceCol{
+  font-size: 1.4rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  width: 65%;
 }
 
 .experienceRow{
@@ -1116,8 +1170,23 @@ footer h3{
 }
 
 .experienceRow h4{
-  font-size: 1.2rem;
+  font-size: 2rem;
   font-weight: 800;
+}
+
+.aboutMe{
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 10rem;
+}
+
+.aboutMe p{
+  max-width: 50%;
+  font-size: 1.4rem;
+}
+
+.aboutMe h3{
+  font-family: 'Druk Wide', sans-serif;
 }
 
 /* ------------------- big text marquee component ---------------------*/
@@ -1126,7 +1195,6 @@ footer h3{
   justify-content: center;
   align-items: center;
   gap: 3rem;
-  padding-left: 3rem;
 }
 
 .bigTextContainer img{
@@ -1241,13 +1309,6 @@ footer h3{
   .testimonialsHeader a{
     font-size: 1rem;
   }
-  
-  .testimonialsHeader{
-    padding-left: 3rem;
-    padding-right: 3rem;
-  }
-
-  
 }
 
 @media only screen and (min-width: 640px) {
@@ -1266,11 +1327,6 @@ footer h3{
   
   .testimonialsHeader a{
     font-size: 1rem;
-  }
-  
-  .testimonialsHeader{
-    padding-left: 3rem;
-    padding-right: 3rem;
   }
 
   
@@ -1294,11 +1350,6 @@ footer h3{
   .testimonialsHeader a{
     font-size: 1rem;
   }
-  
-  .testimonialsHeader{
-    padding-left: 3rem;
-    padding-right: 3rem;
-  }
 } 
 
 /* Large devices (laptops/desktops, 992px and up) */
@@ -1318,9 +1369,6 @@ footer h3{
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1280px) {
-  .testimonialsHeader{
-    padding-left: 10rem;
-    padding-right: 10rem;
-  }
+
 
 }
