--- a/src/App.css
+++ b/src/App.css
@@ -153,7 +153,7 @@ a{
   color: rgb(0, 0, 0);
   font-size: 1rem;
   font-weight: 800;
-  outline: solid 3px rgb(104, 104, 104);
+  outline: solid 1.5px black;
   padding-left: 2rem;
   padding-right: 2rem;
   padding-top: 0.7rem;
@@ -277,18 +277,25 @@ nav img:hover{
   height: 100vh;
   width: 100%;
   background-color: white;
-  top: 8rem;
+  top: 5rem;
   left: 0;
   position: absolute;
   z-index: 0;
   display: flex;
   justify-content: center;
-  align-items: center;
+  display: none;
+  z-index: 11;
 }
 
 .menuLinksMobile ul{
+  padding-top: 5rem;
+  justify-content: flex-start;
   flex-direction: column;
-  font-size: 50px;
+  list-style-type: none;
+}
+
+.menuLinksMobile a{
+  font-size: 5rem;
 }
 
 .navLogoContainer{
@@ -366,47 +373,55 @@ nav ul a:hover{
 }
 
 /* ------------------- landingpage ------------------------------------*/
-.landingVideo{
-  top: 0;
-  left: 0;
-  position: absolute;
-  width: 100%;
-  height: auto;
-  transform: translateY(20px);
-  opacity: 0;
-}
-
-.landingVideo video{
-  max-width: 100%;
-}
-
 .landingPage h3{
   font-size: 1.8rem;
 }
 
 .landingPage{
-  padding-top: 7rem;
+  padding-top: 10rem;
   padding-bottom: 10rem;
   background-color: white;
   height: 110vh;
+  z-index: -2;
+}
+
+.landingImage{
+  padding-top: 10rem;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  opacity: 0;
+  transform: translateY(100px);
+}
+
+.landingImage img{
+  height: 80%;
+  border-radius: 40px;
 }
 
 .landingContainer{
-  padding-top: 5rem;
   height: 100%;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  position: relative;
+  z-index: 99;
 }
 
 .landingBoxUpper h4{
   color: black;
-  font-size: 2rem;
+  font-size: 1.2rem;
   font-weight: 500;
-  padding-left: 5rem;
-  padding-right: 8rem;
-  max-width: 38ch;
+}
+
+.landingText{
+  max-width: 50ch;
 }
 
 .landingBoxUpper p, a{
@@ -414,7 +429,6 @@ nav ul a:hover{
   font-size: 1rem;
   color: var(--darkgrey);
 }
-
 
 .landingBoxUpper p, a:hover{
   opacity: 0.5;
@@ -425,7 +439,6 @@ nav ul a:hover{
   display: flex;
   align-items: center;
   padding-top: 3rem;
-  padding-left: 5rem;
   gap: 0.8rem;
 }
 
@@ -435,9 +448,20 @@ nav ul a:hover{
 }
 
 .landingBoxUpper{
+  width: 100%;
   display: flex;
+  justify-content: space-between;
+  flex-direction: row;
   transform: translateY(50px);
   opacity: 0;
+  padding-left: 5rem;
+  padding-right: 5rem;
+}
+
+.landingBoxUpper img{
+  border-radius: 40px;
+  width: 100%;
+  height: auto;
 }
 
 .marqueeLanding{
@@ -451,12 +475,6 @@ nav ul a:hover{
   color: white;
 }
 
-.landingBoxLower{
-  display: flex;
-  justify-content: space-between;
-  padding-left: 5rem;
-  padding-right: 5rem;
-}
 
 /* --------------------- about me teaser ----------------------*/
 .aboutMeTeaser{
@@ -466,9 +484,6 @@ nav ul a:hover{
   padding-bottom: 12rem;
   padding-left: 5rem;
   padding-right: 5rem;
-}
-
-.aboutMeTeaser{
   display: flex;
   justify-content: space-between;
   gap: 12rem;
@@ -542,6 +557,7 @@ nav ul a:hover{
   justify-content: space-between;
   transform: translateY(50px);
   opacity: 0;
+  padding-bottom: 0rem;
 }
 
 .selectedHeader a{
@@ -552,8 +568,8 @@ nav ul a:hover{
 }
 
 .selectedHeader svg{
-    height: 2rem;
-    padding-right: 0.5rem;
+  height: 2rem;
+  padding-right: 0.5rem;
 }
 
 .selectedButtons button:hover{
@@ -577,9 +593,19 @@ nav ul a:hover{
   transition: 0.7s ease;
 }
 
+/* -------------------- video section --------------------- */
+.videoSection{
+  width: 100%;
+  height: auto;
+}
+
+.videoSection video{
+  max-width: 100%;
+}
+
 /*--------------------- footer ---------------------*/
 footer{
-  padding-top: 10rem;
+  padding-top: 12rem;
   padding-left: 4rem;
   padding-right: 4rem;
   padding-bottom: 5rem;
@@ -943,7 +969,6 @@ footer h3{
 
 /* ------------- testimonials ------------------- */
 .testimonials2{
-  padding-bottom: 13rem;
   display: flex;
   flex-direction: column;
   gap: 10rem;
@@ -1128,7 +1153,7 @@ footer h3{
 .aboutPageHeaderBox img{
   height: 2.5rem;
   margin-right: 1rem;
-  animation: spin 5s linear infinite;
+  animation: spin 3s linear infinite;
 }
 
 .aboutPageHeaderBox p{
@@ -1195,11 +1220,12 @@ footer h3{
   justify-content: center;
   align-items: center;
   gap: 3rem;
+  padding-right: 3rem;
 }
 
 .bigTextContainer img{
   height: 3rem;
-  animation: spin 5s linear infinite;
+  animation: spin 3s linear infinite;
 }
 
 @keyframes spin {
@@ -1213,9 +1239,12 @@ footer h3{
 
 .bigTextContainer h1{
   font-size: 13rem;
-  font-family: 'Manrope', sans-serif;
+  font-family: 'Druk Wide';
   font-weight: 400;
-  letter-spacing: -0.8rem;
+  letter-spacing: -0.2rem;
+  color: transparent;
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: black;
 }
 
 /* ------------------ fetch from category --------------------- /*
@@ -1283,92 +1312,329 @@ footer h3{
   cursor: pointer;
 }
 
-
-
 .projectItemDate{
   display: flex;
   justify-content: space-between;
 }
 
-/* ------------------ RESPONSIVE BREAKPOINTS -------------------------*/
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (max-width: 639px) {
+/* RESPONSIVE BREAKPOINTS */
+@media screen and (max-width: 600px) {
+  nav{
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
   .menuContainerMobile{
-    display: inline-flex;
-  }
-  
-  .menuLinks{
-    display: none;
-  }
-
-  /* --------testimonials -----------*/
-  .testimonials2{
-    padding-bottom: 8rem;
-  }
-  
-  .testimonialsHeader a{
-    font-size: 1rem;
-  }
-}
-
-@media only screen and (min-width: 640px) {
-  .menuContainerMobile{
-    display: inline-flex;
-  }
-  
-  .menuLinks{
-    display: none;
-  }
-
-  /* --------testimonials -----------*/
-  .testimonials2{
-    padding-bottom: 8rem;
-  }
-  
-  .testimonialsHeader a{
-    font-size: 1rem;
-  }
-
-  
-}
-
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {
-  .menuContainerMobile{
-    display: inline-flex;
-  }
-  
-  .menuLinks{
-    display: none;
-  }
-
-  /* --------testimonials -----------*/
-  .testimonials2{
-    padding-bottom: 8rem;
-  }
-  
-  .testimonialsHeader a{
-    font-size: 1rem;
-  }
-} 
-
-/* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 1024px) {
-  .menuContainerMobile{
-    display: none;
+    display: flex;
   }
 
   .menuLinksMobile{
+    display: flex;
+  }
+
+  .menuLinks{
     display: none;
+  }
+
+  /* --------------------- LANDINGPAGE ---------------------- */
+  .landingPage{
+    padding-top: 8rem;
+    padding-bottom: 5rem;
+    height: 100vh;
+  }
+  
+  .landingImage{
+    padding-top: 23rem;
+  }
+  
+  .landingBoxUpper{
+    flex-direction: column-reverse;
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
+  /* --------------------- about me teaser ----------------------*/
+  .aboutMeTeaser{
+    padding-top: 8rem;
+    padding-bottom: 8rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 5rem;
+  }
+
+  .aboutMeTeaserHeader{
+    gap: 2rem;
+  }
+
+  /* ------------------- selectedWorks ---------------- */
+  .sectionWide{
+    padding-bottom: 10rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
+  .selectedButtons{
+    flex-wrap: wrap;
+  }
+
+  .selectedHeader{
+    flex-direction: column-reverse;
+  }
+
+  .selectedHeader a{
+    padding-bottom: 2rem;
+  }
+
+  /* ----------------- CATEGORY FETCH ---------------------*/
+  .projectItemCategory{
+    max-width: 100%;
+  }
+
+  /* --------------- TESTIMONIALS --------------------------*/
+  .testimonials2{
+    padding-bottom: 8rem;
+    gap: 8rem;
+  }
+  
+  .testimonialsHeader{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+  
+  .testimonialsHeaderLink{
+    justify-content: flex-start;
+  }
+
+  /* --------------- FOOTER ------------------------ */
+  footer{
+    padding-top: 5rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+  
+  .footerRight{
+    width: 100%;
+  }
+  
+  .footerTop{
+    gap: 5rem;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-bottom: 5rem;
+  }
+  
+  footer h2{
+    font-size: 2.5rem;
+  }
+  
+  .footerCTA svg{
+    height: 2.5rem;
+  }
+  
+  .footerCTA a{
+    color: white;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    font-size: 2.5rem;
+  }
+
+  /* ---------------- ALL PROJECTS --------------- */
+  .allProjectsPage{
+    padding-top: 8rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    padding-bottom: 8rem;
+  }
+  
+  .allProjectsPage h1{
+    font-size: 3rem;
+  }
+  
+  .allProjectsPage p{
+    max-width: 100%;
+    font-size: 20px;
+  }
+  
+  .allProjectsPageHeader{
+    padding-bottom: 6rem;
+  }
+  
+  .projectItem{
+    display: flex;
+    width: 100%;
+    padding-bottom: 2rem;
+  }
+  
+  .projectItemText h2{
+    font-size: 1.8rem;
+  }
+  
+  .projectItemText h3{
+    font-size: 1.8rem;
+  }
+
+  /* ----------------- SINGLE PROJECT ---------------- */
+  .projectPageBoxLeft{
+    width: 100%;
+  }
+  
+  .projectPageBoxRight{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+  }
+
+  .projectPageBoxRightLower{
+    justify-content: space-between;
+    gap: 4rem;
+  }
+  
+  .projectPage h2{
+    font-size: 3rem;
+  }
+  
+  .projectPageHeader{
+    flex-direction: column;
+    gap: 2rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    padding-top: 8rem;
+  }
+  
+  .projectHeaderPic{
+    padding-left: 2rem;
+    padding-right: 2rem;
+    padding-top: 4rem;
+  }
+  
+  .projectHeaderPic img{
+    border-radius: 25px;
+  }
+  
+  .projectIntro{
+    padding-left: 2rem;
+    padding-right: 2rem;
+    padding-bottom: 9rem;
+  }
+  
+  .projectEmbed{
+    padding-bottom: 6rem;
+  }
+  
+  .projectEmbed video{
+    max-width: 100%;
+  }
+  
+  .sectionImage{
+    max-width: 100%;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    padding-bottom: 6rem;
+  }
+
+  .sectionGrid{
+    flex-direction: column;
+    gap: 2rem;
+  }
+  
+  .downloads{
+    flex-wrap: wrap;
+    gap: 1rem;
+  }
+
+  .downloads a{
+    display: inline-block;
+  }
+  
+  .sectionGrid img{
+    max-width: 100%;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  nav{
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
+  .menuContainerMobile{
+    display: flex;
+  }
+
+  .menuLinksMobile{
+    display: flex;
   }
   
   .menuLinks{
-    display: inline-flex;
+    display: none;
   }
-} 
 
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1280px) {
+  /* --------------------- LANDINGPAGE ---------------------- */
+  .landingPage{
+    padding-top: 8rem;
+    padding-bottom: 2rem;
+    height: 100vh;
+  }
+  
+  .landingImage{
+    padding-top: 23rem;
+  }
+  
+  .landingBoxUpper{
+    flex-direction: column-reverse;
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+}
+
+@media only screen and (max-width: 1280px) {
+    /* --------------------- LANDINGPAGE ---------------------- */
+    .landingPage{
+      padding-top: 8rem;
+      padding-bottom: 2rem;
+      height: 100vh;
+    }
+    
+    .landingImage{
+      padding-top: 23rem;
+    }
+    
+    .landingBoxUpper{
+      flex-direction: column-reverse;
+      padding-left: 2rem;
+      padding-right: 2rem;
+    }
 
 
 }
+
+@media only screen and (max-width: 1600px) {
+      /* --------------------- LANDINGPAGE ---------------------- */
+      .landingPage{
+        padding-top: 8rem;
+        padding-bottom: 2rem;
+        height: 100vh;
+      }
+      
+      .landingImage{
+        padding-top: 23rem;
+      }
+      
+      .landingBoxUpper{
+        flex-direction: column-reverse;
+        padding-left: 2rem;
+        padding-right: 2rem;
+      }
+
+
+
+}
+
+
