--- a/src/App.css
+++ b/src/App.css
@@ -160,7 +160,6 @@ a{
   padding-bottom: 0.7rem;
   border-radius: 25px;
   transition: 0.7s ease;
-  max-width: 250px;
   text-align: center;
 }
 
@@ -295,6 +294,7 @@ nav img:hover{
 }
 
 .menuLinksMobile a{
+  color: black;
   font-size: 5rem;
 }
 
@@ -748,6 +748,21 @@ footer h3{
   padding-bottom: 8rem;
 }
 
+.goBackButton{
+  padding-top: 3rem;
+  padding-left: 5rem;
+  padding-right: 5rem;
+  padding-bottom: 10rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.goBackButton a{
+  font-size: 1.2rem;
+  color: black;
+}
+
 .grid-container{
   display: flex;
   flex-wrap: wrap;
@@ -866,7 +881,7 @@ footer h3{
 
 .projectHeaderPic img{
   border-radius: 40px;
-  max-width: 100%;
+  width: 100%;
 }
 
 .projectIntro{
@@ -1172,7 +1187,7 @@ footer h3{
 
 .aboutExperience h2{
   padding-bottom: 2rem;
-  font-size: 2.4rem;
+  font-size: 2rem;
 }
 
 .experienceRowContainer{
@@ -1181,7 +1196,7 @@ footer h3{
 }
 
 .experienceCol{
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -1195,7 +1210,7 @@ footer h3{
 }
 
 .experienceRow h4{
-  font-size: 2rem;
+  font-size: 1.2rem;
   font-weight: 800;
 }
 
@@ -1212,6 +1227,7 @@ footer h3{
 
 .aboutMe h3{
   font-family: 'Druk Wide', sans-serif;
+  font-size: 2rem;
 }
 
 /* ------------------- big text marquee component ---------------------*/
@@ -1255,6 +1271,7 @@ footer h3{
   gap: 1rem;
   max-width: 48%;
   padding-bottom: 3rem;
+  opacity: 0;
 }
 
 .categoryGrid{
@@ -1317,11 +1334,47 @@ footer h3{
   justify-content: space-between;
 }
 
+/* ----------- FEATUED PROJECTS - bottom projectpage.js ------------ */
+.featuredProjects .projectItemText h2{
+  font-family: 'Manrope', sans-serif;
+  font-size: 1.4rem;
+}
+
+.featuredProjects .projectItemText h3{
+  font-family: 'Manrope', sans-serif;
+  font-size: 1.4rem;
+  font-weight: 600;
+}
+
+.featuredProjects{
+  gap: 3rem;
+  display: flex;
+  flex-direction: column;
+
+  padding-left: 5rem;
+  padding-right: 5rem;
+  padding-bottom: 8rem;
+}
+
+.featuredProjects h2{
+  font-size: 2rem;
+}
+
+.featuredProjects .projectItem{
+  width: 31%;
+}
+
+.featuredProjectsGrid{
+  display: flex;
+  justify-content: space-between;
+}
+
 /* RESPONSIVE BREAKPOINTS */
 @media screen and (max-width: 600px) {
   nav{
     padding-left: 2rem;
     padding-right: 2rem;
+    color: black;
   }
 
   .menuContainerMobile{
@@ -1556,12 +1609,78 @@ footer h3{
   .sectionGrid img{
     max-width: 100%;
   }
+
+  /* ------------------- about me page -------------------- */
+  .aboutPage{
+    padding-left: 2rem;
+    padding-right: 2rem;
+    padding-top: 8rem;
+    padding-bottom: 8rem;
+  }
+
+  .aboutImage img{
+    border-radius: 25px;
+    max-width: 80%;
+  }
+  
+  .aboutMeImage img{
+    border-radius: 25px;
+  }
+  
+  .aboutSkills{
+    flex-direction: column;
+  }
+
+  .skillsetBox{
+    width: 100%;
+  }
+  
+  .aboutPageHeaderBox img{
+    height: 1.5rem;
+    margin-right: 1rem;
+    animation: spin 3s linear infinite;
+  }
+  
+  .aboutPageHeaderBox p{
+    text-indent: 0rem;
+    font-size: 2rem;
+    line-height: 1.66;
+  }
+  
+  .experienceCol{
+    font-size: 1.2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+  
+  .experienceRow{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 3rem;
+  }
+  
+  .aboutMe{
+    flex-direction: column;
+    padding-bottom: 8rem;
+  }
+  
+  .aboutMe p{
+    max-width: 100%;
+  }
+  
+  .aboutMe h3{
+    font-family: 'Druk Wide', sans-serif;
+    font-size: 2rem;
+  }
 }
 
 @media screen and (max-width: 960px) {
   nav{
     padding-left: 2rem;
     padding-right: 2rem;
+    color: black;
   }
 
   .menuContainerMobile{
